@@ -563,6 +563,12 @@ You can use 'quit', 'exit', ':q' or 'q' command to exit cupt shell.
 
 =over
 
+=item --purge
+
+when removing packages (specified in the arguments), also delete their configuration files
+
+See also the configuration option L<cupt::worker::purge>.
+
 =item --no-remove
 
 disallow problem resolver to remove manually installed packages. Packages that are marked to remove/purge in the command line will be remove/purged as usual.
@@ -817,12 +823,6 @@ sets preferred release to pick up packages from, you can specify codename or arc
 Corresponding configuration option: L<apt::default-release>
 
 Examples: C<cupt install -t unstable xserver-xorg>, C<cupt -t squeeze full-upgrade>
-
-=item --purge
-
-when removing packages, also delete their configuration files
-
-Corresponding configuration option: L<cupt::worker::purge>
 
 =item --quiet,-q
 
